--- a/EDA_R_FinalProject/WADOH_DataExplore.Rmd
+++ b/EDA_R_FinalProject/WADOH_DataExplore.Rmd
@@ -99,7 +99,7 @@ vaccReported <- vaccReported[vaccReported$nonmedical_exempt  <= vaccReported$enr
 vaccReported <- vaccReported[vaccReported$enrolled != 0,]
 
 
-#noticed in my exploration that there was one very big school (10,700 students).  This seems unrealistic for a town the size of Kelson.  That would be ~2600 studens per class.  Some searching puts the number at 1819.  
+#noticed in my exploration that there was one very big school (10,700 students).  This seems unrealistic for a town the size of Kelso.  That would be ~2600 studens per class.  Some searching puts the number at 1819.  
 vaccReported[vaccReported$enrolled > 10000,][3]
 vaccReported[vaccReported$school_name == "Kelso High School",][13]
 
@@ -109,6 +109,9 @@ http://www.schooldigger.com/go/WA/schools/0000300593/school.aspx
 
 #correct kelso high school enrollment
 vaccReported[vaccReported$school_name == "Kelso High School",][13][3,] <- 1562
+
+#save vaccReported as RDS
+saveRDS(vaccReported, "data/vaccReported")
 
 
 #create subset of schools with populations of at least 100
