--- a/EDA_R_FinalProject/EDA_R_FinalProject_Submission.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject_Submission.Rmd
@@ -11,7 +11,7 @@ Additional cleaning and wrangling can be found here:
 
 [githubrepo](https://github.com/baumanab/EDA_R_Udacity/blob/master/EDA_R_FinalProject/EDA_R_FinalProject_WADOH_DataFrameWrangle.Rmd)
 
-An initial exploration wherein I make decisions about subsetting data for this RMD is here:
+An initial exploration wherein I make decisions about subsetting data for this RMD is and some additoinal corrections for student enrollment, is here:
 
 [githubrepo](https://github.com/baumanab/EDA_R_Udacity/blob/master/EDA_R_FinalProject/WADOH_DataExplore.Rmd)
 
@@ -48,25 +48,72 @@ setwd("Udacity//dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/")
 load("project_pause.RData")
 ```
 
-``` {r echo = FALSE, alter data}
+``` {r echo = FALSE ,alter data}
 #limit fields
-select_fields <- c("school_year", "school_code", "school_name", "school_type", "school_city","school_state", "school_zip", "school_county", "school_district", "district_code", "enrolled", "total_exemptions", "medical_exempt", "nonmedical_exempt", "exempt_MMR", "percent_exempt", "percent_medical_exempt","percent_nonmedexempt", "percent_exempt_MMR")
+fields <- c("school_year", "school_code", "school_name", "school_type", "school_city","school_state", "school_zip", "school_county", "school_district", "district_code", "enrolled", "total_exemptions", "medical_exempt", "nonmedical_exempt", "exempt_MMR", "percent_exempt", "percent_medical_exempt","percent_nonmedexempt", "percent_exempt_MMR", "reported")
 
-vaccReported <- vaccReported[,select_fields]
+
+vacc <- subset(vacc, select = names(vacc) %in% fields)
+
+vaccReported <- subset(vaccReported, na.rm = TRUE, select = fields )
+
+
 ```
 
 # Univariate Plots Section
 ```{r echo=FALSE, Univariate_Plots}
-p = ggplot(vaccReported, aes(x = enrolled, y = percent_exempt))
+#vacc
+names(vacc)
+str(vacc)
+summary(vacc)
 
-p1 =  p + geom_point(alpha = .1)
+#investigate reporting
+
+#counts of reported
+table(vacc$reported)
+#counts of repored for each year
+with(vacc,table(school_year, reported))[,2:3]
+#counts of reported for each school type
+with(vacc,table(school_type, reported))[,2:3]
+#counts of reported for each school type for each school year
+with(vacc,table(school_type, reported, school_year))
+#percent reported for each school type
+prop.table(with(vacc,table(school_type, reported)),1)[,2:3]*100
+#percent reported for each school type for each year
+prop.table(with(vacc,table(school_type, reported,school_year == "2011")),c(1,3))[,2:3,2]*100
+prop.table(with(vacc,table(school_type, reported,school_year == "2012")),c(1,3))[,2:3,2]*100
+prop.table(with(vacc,table(school_type, reported,school_year == "2013")),c(1,3))[,2:3,2]*100
+
+#do a size by proportion
+ggplot(data = vacc, aes(x = reported, y = school_county)) +
+  geom_point() +
+  geom_jitter(aes(color_s = "school_type"))
+
+#exemption rate vs enrollment
+p = ggplot(vaccReported, aes(x = enrolled, y = percent_exempt)) + 
+  geom_point(alpha = .4, aes(color = "red"))  
+  
+p1 = p +  geom_line(alpha = .5,stat = 'summary',fun.y = mean, linetype = 1, color = "black", size = 1) 
+
+p2 = p1 + facet_wrap(~school_year)
+
+p3 = p1 + geom_vline(xintercept = 2500, color="orange", size = 1) +
+     geom_vline(xintercept = 2000, color="orange", size = 1)  
+  
+
+p4 = p3 + scale_x_continuous(limits = c(0, 2000), breaks = seq(0,2000,50))
+
+p5 = p4 + geom_vline(xintercept = 100, color="orange", size = 1) +
+  geom_vline(xintercept = 25, color="orange", size = 1)
+  
+
+p1
+p2
+p3
+p4
+p5
 
 
-p2 = p1 + geom_line(stat = 'summary',fun.y = mean, linetype = 1, color = "red")
-
-p3 = p2 + geom_line(stat = 'summary',fun.y = median, linetype = 3, color = "blue")
-
-p4 = p3 + facet_wrap(~school_year)
 
 
 
